@@ -22,61 +22,46 @@ import static org.apache.ignite.configuration.annotation.ConfigurationType.DISTR
 import static org.apache.ignite.internal.distributionzones.DistributionZoneManager.DEFAULT_ZONE_ID;
 import static org.apache.ignite.internal.distributionzones.DistributionZoneManager.DEFAULT_ZONE_NAME;
 import static org.apache.ignite.internal.distributionzones.DistributionZonesUtil.zoneDataNodesKey;
+import static org.apache.ignite.internal.distributionzones.DistributionZonesUtil.zoneScaleUpChangeTriggerKey;
 import static org.apache.ignite.internal.distributionzones.DistributionZonesUtil.zonesChangeTriggerKey;
 import static org.apache.ignite.internal.distributionzones.DistributionZonesUtil.zonesLogicalTopologyKey;
-import static org.apache.ignite.internal.metastorage.impl.MetaStorageServiceImpl.toIfInfo;
-import static org.apache.ignite.internal.util.ByteUtils.fromBytes;
+import static org.apache.ignite.internal.distributionzones.util.DistributionZonesTestUtil.assertDataNodesForZone;
+import static org.apache.ignite.internal.distributionzones.util.DistributionZonesTestUtil.mockMetaStorageListener;
 import static org.apache.ignite.internal.util.ByteUtils.longToBytes;
 import static org.apache.ignite.internal.util.ByteUtils.toBytes;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.after;
-import static org.mockito.Mockito.lenient;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.timeout;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
-import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.atomic.AtomicLong;
-import org.apache.ignite.configuration.ConfigurationValue;
 import org.apache.ignite.configuration.NamedConfigurationTree;
 import org.apache.ignite.configuration.NamedListView;
+import org.apache.ignite.internal.cluster.management.ClusterManagementGroupManager;
+import org.apache.ignite.internal.cluster.management.raft.ClusterStateStorage;
+import org.apache.ignite.internal.cluster.management.raft.TestClusterStateStorage;
+import org.apache.ignite.internal.cluster.management.topology.LogicalTopology;
+import org.apache.ignite.internal.cluster.management.topology.LogicalTopologyImpl;
 import org.apache.ignite.internal.cluster.management.topology.LogicalTopologyServiceImpl;
-import org.apache.ignite.internal.cluster.management.topology.api.LogicalTopologySnapshot;
 import org.apache.ignite.internal.configuration.ConfigurationManager;
 import org.apache.ignite.internal.configuration.storage.TestConfigurationStorage;
-import org.apache.ignite.internal.distributionzones.configuration.DistributionZoneChange;
-import org.apache.ignite.internal.distributionzones.configuration.DistributionZoneConfiguration;
-import org.apache.ignite.internal.distributionzones.configuration.DistributionZoneView;
 import org.apache.ignite.internal.distributionzones.configuration.DistributionZonesConfiguration;
-import org.apache.ignite.internal.distributionzones.configuration.DistributionZonesView;
 import org.apache.ignite.internal.metastorage.Entry;
 import org.apache.ignite.internal.metastorage.EntryEvent;
 import org.apache.ignite.internal.metastorage.MetaStorageManager;
 import org.apache.ignite.internal.metastorage.WatchEvent;
 import org.apache.ignite.internal.metastorage.WatchListener;
-import org.apache.ignite.internal.metastorage.command.MetaStorageCommandsFactory;
-import org.apache.ignite.internal.metastorage.command.MultiInvokeCommand;
-import org.apache.ignite.internal.metastorage.command.info.StatementResultInfo;
-import org.apache.ignite.internal.metastorage.dsl.If;
-import org.apache.ignite.internal.metastorage.dsl.StatementResult;
 import org.apache.ignite.internal.metastorage.impl.EntryImpl;
-import org.apache.ignite.internal.metastorage.impl.MetaStorageManagerImpl;
 import org.apache.ignite.internal.metastorage.server.SimpleInMemoryKeyValueStorage;
 import org.apache.ignite.internal.metastorage.server.raft.MetaStorageListener;
-import org.apache.ignite.internal.raft.Command;
-import org.apache.ignite.internal.raft.WriteCommand;
-import org.apache.ignite.internal.raft.service.CommandClosure;
 import org.apache.ignite.internal.raft.service.RaftGroupService;
 import org.apache.ignite.internal.schema.configuration.TableChange;
 import org.apache.ignite.internal.schema.configuration.TableConfiguration;
@@ -85,32 +70,42 @@ import org.apache.ignite.internal.schema.configuration.TablesConfiguration;
 import org.apache.ignite.internal.testframework.IgniteAbstractTest;
 import org.apache.ignite.internal.vault.VaultEntry;
 import org.apache.ignite.internal.vault.VaultManager;
-import org.apache.ignite.lang.IgniteInternalException;
-import org.jetbrains.annotations.Nullable;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.Mock;
 
 /**
  * Tests distribution zones logical topology changes and reaction to that changes.
  */
 //TODO: IGNITE-18564 Add tests with not default distribution zones, when distributionZones.change.trigger per zone will be created.
 public class DistributionZoneManagerWatchListenerTest extends IgniteAbstractTest {
-    private static final String ZONE_NAME_1 = "zone1";
-
-    private VaultManager vaultMgr;
-
     private DistributionZoneManager distributionZoneManager;
 
     private SimpleInMemoryKeyValueStorage keyValueStorage;
 
     private ConfigurationManager clusterCfgMgr;
 
+    @Mock
+    private LogicalTopologyServiceImpl logicalTopologyService;
+
+    private LogicalTopology topology;
+
+    private ClusterStateStorage clusterStateStorage;
+
+    private VaultManager vaultMgr;
+
+    private MetaStorageManager metaStorageManager;
+
     private WatchListener watchListener;
 
     private DistributionZonesConfiguration zonesConfiguration;
 
-    private MetaStorageManager metaStorageManager;
+    @Mock
+    private ClusterManagementGroupManager cmgManager;
+
+    @Mock
+    RaftGroupService metaStorageService;
 
     @BeforeEach
     public void setUp() {
@@ -122,18 +117,18 @@ public class DistributionZoneManagerWatchListenerTest extends IgniteAbstractTest
                 List.of()
         );
 
-        zonesConfiguration = mock(DistributionZonesConfiguration.class);
+        zonesConfiguration = clusterCfgMgr.configurationRegistry()
+                .getConfiguration(DistributionZonesConfiguration.KEY);
 
         metaStorageManager = mock(MetaStorageManager.class);
 
-        LogicalTopologyServiceImpl logicalTopologyService = mock(LogicalTopologyServiceImpl.class);
+        cmgManager = mock(ClusterManagementGroupManager.class);
 
-        LogicalTopologySnapshot topologySnapshot = mock(LogicalTopologySnapshot.class);
+        clusterStateStorage = new TestClusterStateStorage();
 
-        when(topologySnapshot.version()).thenReturn(1L);
-        when(topologySnapshot.nodes()).thenReturn(Collections.emptySet());
+        topology = new LogicalTopologyImpl(clusterStateStorage);
 
-        when(logicalTopologyService.logicalTopologyOnLeader()).thenReturn(completedFuture(topologySnapshot));
+        LogicalTopologyServiceImpl logicalTopologyService = new LogicalTopologyServiceImpl(topology, cmgManager);
 
         vaultMgr = mock(VaultManager.class);
 
@@ -154,7 +149,8 @@ public class DistributionZoneManagerWatchListenerTest extends IgniteAbstractTest
                 tablesConfiguration,
                 metaStorageManager,
                 logicalTopologyService,
-                vaultMgr
+                vaultMgr,
+                "node"
         );
 
         clusterCfgMgr.start();
@@ -162,77 +158,23 @@ public class DistributionZoneManagerWatchListenerTest extends IgniteAbstractTest
         mockVaultAppliedRevision(1);
 
         when(vaultMgr.get(zonesLogicalTopologyKey())).thenReturn(completedFuture(new VaultEntry(zonesLogicalTopologyKey(), null)));
+        when(vaultMgr.put(any(), any())).thenReturn(completedFuture(null));
 
-        when(metaStorageManager.registerExactWatch(any(), any())).then(invocation -> {
+        doAnswer(invocation -> {
             watchListener = invocation.getArgument(1);
 
-            return completedFuture(null);
-        });
-
-        mockDefaultZoneConfiguration();
-        mockDefaultZoneView();
-        mockEmptyZonesList();
+            return null;
+        }).when(metaStorageManager).registerExactWatch(any(), any());
 
         AtomicLong raftIndex = new AtomicLong();
 
-        keyValueStorage = spy(new SimpleInMemoryKeyValueStorage());
+        keyValueStorage = spy(new SimpleInMemoryKeyValueStorage("test"));
 
         MetaStorageListener metaStorageListener = new MetaStorageListener(keyValueStorage);
 
-        RaftGroupService metaStorageService = mock(RaftGroupService.class);
+        metaStorageService = mock(RaftGroupService.class);
 
-        // Delegate directly to listener.
-        lenient().doAnswer(
-                invocationClose -> {
-                    Command cmd = invocationClose.getArgument(0);
-
-                    long commandIndex = raftIndex.incrementAndGet();
-
-                    CompletableFuture<Serializable> res = new CompletableFuture<>();
-
-                    CommandClosure<WriteCommand> clo = new CommandClosure<>() {
-                        /** {@inheritDoc} */
-                        @Override
-                        public long index() {
-                            return commandIndex;
-                        }
-
-                        /** {@inheritDoc} */
-                        @Override
-                        public WriteCommand command() {
-                            return (WriteCommand) cmd;
-                        }
-
-                        /** {@inheritDoc} */
-                        @Override
-                        public void result(@Nullable Serializable r) {
-                            if (r instanceof Throwable) {
-                                res.completeExceptionally((Throwable) r);
-                            } else {
-                                res.complete(r);
-                            }
-                        }
-                    };
-
-                    try {
-                        metaStorageListener.onWrite(List.of(clo).iterator());
-                    } catch (Throwable e) {
-                        res.completeExceptionally(new IgniteInternalException(e));
-                    }
-
-                    return res;
-                }
-        ).when(metaStorageService).run(any());
-
-        MetaStorageCommandsFactory commandsFactory = new MetaStorageCommandsFactory();
-
-        lenient().doAnswer(invocationClose -> {
-            If iif = invocationClose.getArgument(0);
-
-            MultiInvokeCommand multiInvokeCommand = commandsFactory.multiInvokeCommand().iif(toIfInfo(iif, commandsFactory)).build();
-
-            return metaStorageService.run(multiInvokeCommand).thenApply(bi -> new StatementResult(((StatementResultInfo) bi).result()));
-        }).when(metaStorageManager).invoke(any());
+        mockMetaStorageListener(raftIndex, metaStorageListener, metaStorageService, metaStorageManager);
     }
 
     @AfterEach
@@ -247,10 +189,17 @@ public class DistributionZoneManagerWatchListenerTest extends IgniteAbstractTest
     }
 
     @Test
-    void testDataNodesOfDefaultZoneUpdatedOnWatchListenerEvent() {
+    void testDataNodesOfDefaultZoneUpdatedOnWatchListenerEvent() throws Exception {
         mockVaultZonesLogicalTopologyKey(Set.of());
 
+        mockCmgLocalNodes();
+
         distributionZoneManager.start();
+
+        distributionZoneManager.alterZone(
+                DEFAULT_ZONE_NAME,
+                new DistributionZoneConfigurationParameters.Builder(DEFAULT_ZONE_NAME).dataNodesAutoAdjustScaleUp(0).build()
+        ).get();
 
         //first event
 
@@ -258,9 +207,9 @@ public class DistributionZoneManagerWatchListenerTest extends IgniteAbstractTest
 
         watchListenerOnUpdate(nodes, 2);
 
-        verify(keyValueStorage, timeout(1000).times(2)).invoke(any());
+        verify(keyValueStorage, timeout(1000).times(3)).invoke(any());
 
-        checkDataNodesOfZone(DEFAULT_ZONE_ID, nodes);
+        assertDataNodesForZone(DEFAULT_ZONE_ID, nodes, keyValueStorage);
 
         //second event
 
@@ -268,9 +217,12 @@ public class DistributionZoneManagerWatchListenerTest extends IgniteAbstractTest
 
         watchListenerOnUpdate(nodes, 3);
 
-        verify(keyValueStorage, timeout(1000).times(3)).invoke(any());
+        verify(keyValueStorage, timeout(1000).times(4)).invoke(any());
 
-        checkDataNodesOfZone(DEFAULT_ZONE_ID, nodes);
+        nodes = Set.of("node1", "node2", "node3");
+
+        // Scale up just adds node to data nodes
+        assertDataNodesForZone(DEFAULT_ZONE_ID, nodes, keyValueStorage);
 
         //third event
 
@@ -280,35 +232,44 @@ public class DistributionZoneManagerWatchListenerTest extends IgniteAbstractTest
 
         verify(keyValueStorage, timeout(1000).times(4)).invoke(any());
 
-        checkDataNodesOfZone(DEFAULT_ZONE_ID, nodes);
+        nodes = Set.of("node1", "node2", "node3");
+
+        // Scale up wasn't triggered
+        assertDataNodesForZone(DEFAULT_ZONE_ID, nodes, keyValueStorage);
     }
 
     @Test
-    void testStaleWatchEvent() {
+    void testStaleWatchEvent() throws Exception {
         mockVaultZonesLogicalTopologyKey(Set.of());
+
+        mockCmgLocalNodes();
 
         distributionZoneManager.start();
 
-        mockVaultAppliedRevision(1);
+        distributionZoneManager.alterZone(
+                DEFAULT_ZONE_NAME,
+                new DistributionZoneConfigurationParameters.Builder(DEFAULT_ZONE_NAME).dataNodesAutoAdjustScaleUp(0).build()
+        ).get();
 
         long revision = 100;
 
-        keyValueStorage.put(zonesChangeTriggerKey().bytes(), longToBytes(revision));
+        keyValueStorage.put(zoneScaleUpChangeTriggerKey(DEFAULT_ZONE_ID).bytes(), longToBytes(revision));
 
         Set<String> nodes = Set.of("node1", "node2");
 
         watchListenerOnUpdate(nodes, revision);
 
+        // two invokes on start, and invoke for update scale up won't be triggered, because revision == zoneScaleUpChangeTriggerKey
         verify(keyValueStorage, timeout(1000).times(2)).invoke(any());
 
-        checkDataNodesOfZone(DEFAULT_ZONE_ID, Collections.emptySet());
+        assertDataNodesForZone(DEFAULT_ZONE_ID, Set.of(), keyValueStorage);
     }
 
     @Test
-    void testStaleVaultRevisionOnZoneManagerStart() {
+    void testStaleVaultRevisionOnZoneManagerStart() throws InterruptedException {
         long revision = 100;
 
-        keyValueStorage.put(zonesChangeTriggerKey().bytes(), longToBytes(revision));
+        keyValueStorage.put(zonesChangeTriggerKey(DEFAULT_ZONE_ID).bytes(), longToBytes(revision));
 
         Set<String> nodes = Set.of("node1", "node2");
 
@@ -316,164 +277,46 @@ public class DistributionZoneManagerWatchListenerTest extends IgniteAbstractTest
 
         mockVaultAppliedRevision(revision);
 
+        mockCmgLocalNodes();
+
         distributionZoneManager.start();
 
-        verify(metaStorageManager, timeout(1000).times(1)).invoke(any());
+        verify(metaStorageManager, timeout(1000).times(2)).invoke(any());
 
-        checkDataNodesOfZone(1, null);
+        assertDataNodesForZone(DEFAULT_ZONE_ID, null, keyValueStorage);
     }
 
     @Test
-    void testDataNodesUpdatedOnZoneManagerStart() {
+    void testDataNodesUpdatedOnZoneManagerStart() throws InterruptedException {
         mockVaultAppliedRevision(2);
 
         Set<String> nodes = Set.of("node1", "node2");
 
         mockVaultZonesLogicalTopologyKey(nodes);
 
+        mockCmgLocalNodes();
+
         distributionZoneManager.start();
 
-        verify(keyValueStorage, timeout(1000).times(1)).invoke(any());
+        verify(keyValueStorage, timeout(1000).times(2)).invoke(any());
 
-        checkDataNodesOfZone(DEFAULT_ZONE_ID, nodes);
+        assertDataNodesForZone(DEFAULT_ZONE_ID, nodes, keyValueStorage);
     }
 
     @Test
     void testLogicalTopologyIsNullOnZoneManagerStart1() {
-        mockZones(mockZoneWithAutoAdjust());
-
-        mockVaultAppliedRevision(2);
+        mockCmgLocalNodes();
 
         when(vaultMgr.get(zonesLogicalTopologyKey()))
                 .thenReturn(completedFuture(new VaultEntry(zonesLogicalTopologyKey(), null)));
 
         distributionZoneManager.start();
 
-        verify(keyValueStorage, after(500).never()).invoke(any());
+        // 1 invoke because only invoke to zones logical topology happens
+        verify(keyValueStorage, timeout(1000).times(1)).invoke(any());
 
         assertNull(keyValueStorage.get(zoneDataNodesKey(DEFAULT_ZONE_ID).bytes()).value());
         assertNull(keyValueStorage.get(zoneDataNodesKey(1).bytes()).value());
-    }
-
-    private void checkDataNodesOfZone(int zoneId, Set<String> nodes) {
-        Entry entry = keyValueStorage.get(zoneDataNodesKey(zoneId).bytes());
-
-        if (nodes == null) {
-            assertNull(entry.value(), () -> "Actual node list: " + fromBytes(entry.value()));
-        } else {
-            assertNotNull(entry);
-            assertNotNull(entry.value());
-
-            Set<String> newDataNodes = fromBytes(entry.value());
-
-            assertTrue(newDataNodes.containsAll(nodes));
-            assertEquals(nodes.size(), newDataNodes.size());
-        }
-    }
-
-    private void mockEmptyZonesList() {
-        NamedConfigurationTree<DistributionZoneConfiguration, DistributionZoneView, DistributionZoneChange> namedConfigurationTree =
-                mock(NamedConfigurationTree.class);
-        when(zonesConfiguration.distributionZones()).thenReturn(namedConfigurationTree);
-
-        NamedListView<DistributionZoneView> namedListView = mock(NamedListView.class);
-        when(namedConfigurationTree.value()).thenReturn(namedListView);
-
-        when(zonesConfiguration.distributionZones().value().namedListKeys()).thenReturn(Collections.emptyList());
-    }
-
-    private void mockZones(DistributionZoneConfiguration... zones) {
-        List<String> names = new ArrayList<>();
-
-        NamedConfigurationTree<DistributionZoneConfiguration, DistributionZoneView, DistributionZoneChange> namedConfigurationTree =
-                mock(NamedConfigurationTree.class);
-        when(zonesConfiguration.distributionZones()).thenReturn(namedConfigurationTree);
-
-        NamedListView<DistributionZoneView> namedListView = mock(NamedListView.class);
-        when(namedConfigurationTree.value()).thenReturn(namedListView);
-
-        for (DistributionZoneConfiguration zone : zones) {
-            names.add(zone.name().value());
-
-            when(namedConfigurationTree.get(zone.name().value())).thenReturn(zone);
-        }
-
-        when(namedListView.namedListKeys()).thenReturn(names);
-    }
-
-    private DistributionZoneConfiguration mockZoneConfiguration(
-            Integer zoneId,
-            String name,
-            Integer dataNodesAutoAdjustTime,
-            Integer dataNodesAutoAdjustScaleUpTime,
-            Integer dataNodesAutoAdjustScaleDownTime
-    ) {
-        DistributionZoneConfiguration distributionZoneConfiguration = mock(DistributionZoneConfiguration.class);
-
-        ConfigurationValue<String> nameValue = mock(ConfigurationValue.class);
-        when(distributionZoneConfiguration.name()).thenReturn(nameValue);
-        when(nameValue.value()).thenReturn(name);
-
-        ConfigurationValue<Integer> zoneIdValue = mock(ConfigurationValue.class);
-        when(distributionZoneConfiguration.zoneId()).thenReturn(zoneIdValue);
-        when(zoneIdValue.value()).thenReturn(zoneId);
-
-        ConfigurationValue<Integer> dataNodesAutoAdjust = mock(ConfigurationValue.class);
-        when(distributionZoneConfiguration.dataNodesAutoAdjust()).thenReturn(dataNodesAutoAdjust);
-        when(dataNodesAutoAdjust.value()).thenReturn(dataNodesAutoAdjustTime);
-
-        ConfigurationValue<Integer> dataNodesAutoAdjustScaleUp = mock(ConfigurationValue.class);
-        when(distributionZoneConfiguration.dataNodesAutoAdjustScaleUp()).thenReturn(dataNodesAutoAdjustScaleUp);
-        when(dataNodesAutoAdjustScaleUp.value()).thenReturn(dataNodesAutoAdjustScaleUpTime);
-
-        ConfigurationValue<Integer> dataNodesAutoAdjustScaleDown = mock(ConfigurationValue.class);
-        when(distributionZoneConfiguration.dataNodesAutoAdjustScaleDown()).thenReturn(dataNodesAutoAdjustScaleDown);
-        when(dataNodesAutoAdjustScaleDown.value()).thenReturn(dataNodesAutoAdjustScaleDownTime);
-
-        return distributionZoneConfiguration;
-    }
-
-    private DistributionZoneView mockZoneView(
-            Integer zoneId,
-            String name,
-            Integer dataNodesAutoAdjustTime,
-            Integer dataNodesAutoAdjustScaleUpTime,
-            Integer dataNodesAutoAdjustScaleDownTime
-    ) {
-        DistributionZoneView distributionZoneView = mock(DistributionZoneView.class);
-
-        when(distributionZoneView.name()).thenReturn(name);
-        when(distributionZoneView.zoneId()).thenReturn(zoneId);
-        when(distributionZoneView.dataNodesAutoAdjust()).thenReturn(dataNodesAutoAdjustTime);
-        when(distributionZoneView.dataNodesAutoAdjustScaleUp()).thenReturn(dataNodesAutoAdjustScaleUpTime);
-        when(distributionZoneView.dataNodesAutoAdjustScaleDown()).thenReturn(dataNodesAutoAdjustScaleDownTime);
-
-        return distributionZoneView;
-    }
-
-    private DistributionZoneConfiguration mockZoneWithAutoAdjust() {
-        return mockZoneConfiguration(1, ZONE_NAME_1, 100, Integer.MAX_VALUE, Integer.MAX_VALUE);
-    }
-
-    private DistributionZoneConfiguration mockDefaultZoneConfiguration() {
-        DistributionZoneConfiguration defaultZone = mockZoneConfiguration(DEFAULT_ZONE_ID, DEFAULT_ZONE_NAME, 100, Integer.MAX_VALUE,
-                Integer.MAX_VALUE);
-
-        when(zonesConfiguration.defaultDistributionZone()).thenReturn(defaultZone);
-
-        return defaultZone;
-    }
-
-    private DistributionZoneView mockDefaultZoneView() {
-        DistributionZoneView defaultZone = mockZoneView(DEFAULT_ZONE_ID, DEFAULT_ZONE_NAME, 100, Integer.MAX_VALUE,
-                Integer.MAX_VALUE);
-
-        DistributionZonesView zonesView = mock(DistributionZonesView.class);
-
-        when(zonesView.defaultDistributionZone()).thenReturn(defaultZone);
-        when(zonesConfiguration.value()).thenReturn(zonesView);
-
-        return defaultZone;
     }
 
     private void mockVaultZonesLogicalTopologyKey(Set<String> nodes) {
@@ -496,8 +339,10 @@ public class DistributionZoneManagerWatchListenerTest extends IgniteAbstractTest
     }
 
     private void mockVaultAppliedRevision(long revision) {
-        // TODO: remove this as part of https://issues.apache.org/jira/browse/IGNITE-18397
-        when(vaultMgr.get(MetaStorageManagerImpl.APPLIED_REV))
-                .thenReturn(completedFuture(new VaultEntry(MetaStorageManagerImpl.APPLIED_REV, longToBytes(revision))));
+        when(metaStorageManager.appliedRevision()).thenReturn(revision);
+    }
+
+    private void mockCmgLocalNodes() {
+        when(cmgManager.logicalTopology()).thenReturn(completedFuture(topology.getLogicalTopology()));
     }
 }
